fix: navBar.css .menu gap

--- a/frontend/src/css/NavBar.css
+++ b/frontend/src/css/NavBar.css
@@ -31,7 +31,7 @@
 
 .menu {
     display: flex;
-    gap: 40px;
+    gap: 60px;
     padding: 15px 40px;
 
     border-radius: 40px;
